🔧 Fix setting button style on dark mode

--- a/frontend/src/styles/main.scss
+++ b/frontend/src/styles/main.scss
@@ -153,7 +153,7 @@ mark {
     border: none;
     width: 100%;
     border-radius: 5px;
-    padding: .375rem .75rem;;
+    padding: 6px 12px;
     border: 1px solid #e6e6e6;
     background: #fff;
 
@@ -166,27 +166,20 @@ mark {
 
 .input-group-prepend {
     flex: 1 0 auto;
-    padding: .375rem .75rem;
-    border: 1px solid #e6e6e6;
     border-right: none;
-    background: #ececec;
-
-    body.dark & {
-        border: 1px solid #363636;
-        background: #000000;
-    }
 
     .input-group-text {
+        display: flex;
+        padding: 6px 0;
+        border-bottom: 1px solid #999;
         color: #000;
-        border: none;
-        background: none;
         font-size: 0.9em;
         font-weight: 600;
-        padding: 0;
         margin: 0;
 
         body.dark & {
-            color: #fff;
+            color: #d8d8d8;
+            border-bottom: 1px solid #6c6c6c;
         }
     }
 }
@@ -195,6 +188,7 @@ mark {
     margin: 4px 0;
     display: flex;
     align-items: center;
+    gap: 6px;
 }
 
 .form-check {
